--- a/src/css/variables.scss
+++ b/src/css/variables.scss
@@ -187,14 +187,14 @@ $screen-unsupported: 240px;
   --dark-static: #2B2727;
   --dark-background: #00000099;
 
-  --blue-dark: #0242af;
+  --blue-dark: #1950b0;
   --blue-deep: #003fb5;
   --blue-normal: #0255e3;
   --blue-cyan: #037bb7;
 
   --neon-blue: #014ccd;
   --neon-green: #22c666;
-  --neon-yellow: #fae207;
+  --neon-yellow: #FCE300;
 
   --check: url("data:image/svg+xml,%3Csvg xmlns='http://www.w3.org/2000/svg' width='32' height='32' fill='none' %3E%3Cpath stroke='%23C1C1C2' stroke-linecap='round' stroke-linejoin='round' stroke-width='4' d='m23.556 12.444-9.778 9.34L8 16.889'/%3E%3C/svg%3E")
 }
